force-app/main/default/objects/SB_Product__c/SB_Product__c.object-meta.xml
<CustomObject>
    <description>Custom object to store Products as Standard Bank have requirements that cannot be met with standard object.</description>
    <label>Product</label>
    <nameField>
        <displayFormat>Prod-{000000}</displayFormat>
        <label>Prod-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>