force-app/main/default/objects/SB_Product__c/fields/Advisory_Arranging_Fees_bps__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Arranging_Fees_bps__c</fullName>
    <description>Input Arranging and Advisory related fees including Underwrite fees for Unfunded Underwrite scenarios, expressed in bps.
SGPRT-3960</description>
    <inlineHelpText>Input Arranging and Advisory related fees including Underwrite fees for Unfunded Underwrite scenarios, expressed in bps.</inlineHelpText>
    <label>Advisory/ Arranging Fees (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>