force-app/main/default/objects/SB_Product__c/fields/Balance_Sheet_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sheet_of_Booking__c</fullName>
    <description>Field contains a list of Standard Bank Legal Entities - C-00000456. Field Label changed.</description>
    <inlineHelpText>The Standard Bank Legal Entity is where Asset / Revenue will be booked. If divided between more than one Legal Entity, please create a separate Product for each.</inlineHelpText>
    <label>Legal Entity of Booking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angola - Standard Bank de Angola S.A.</fullName>
            </value>
            <value>
                <fullName>Botswana - Stanbic Bank Botswana Limited</fullName>
            </value>
            <value>
                <fullName>Brazil - Banco Standard de Investimentos S.A.</fullName>
            </value>
            <value>
                <fullName>China - Standard Resources (China) Limited</fullName>
            </value>
            <value>
                <fullName>Côte d&apos;Ivoire - Stanbic Bank</fullName>
            </value>
            <value>
                <fullName>D R Congo - Stanbic Bank RDC s.a.r.l.</fullName>
            </value>
            <value>
                <fullName>Ghana - Stanbic Bank Ghana Limited</fullName>
            </value>
            <value>
                <fullName>Hong Kong - Standard Bank Asia Limited</fullName>
            </value>
            <value>
                <fullName>Isle of Man - Standard Bank Isle of Man Branch</fullName>
            </value>
            <value>
                <fullName>Isle of Man - Standard Bank Isle of Man Limited</fullName>
            </value>
            <value>
                <fullName>Isle of Man - Standard Finance (Isle of Man) Ltd</fullName>
            </value>
            <value>
                <fullName>Jersey - Standard Bank Jersey Limited</fullName>
            </value>
            <value>
                <fullName>Kenya - Stanbic Bank Kenya Limited</fullName>
            </value>
            <value>
                <fullName>Lesotho - Standard Lesotho Bank Limited</fullName>
            </value>
            <value>
                <fullName>Malawi - Standard Bank Limited</fullName>
            </value>
            <value>
                <fullName>Mauritius - Standard Bank (Mauritius) Limited</fullName>
            </value>
            <value>
                <fullName>Mozambique - Standard Bank s.a.r.l.</fullName>
            </value>
            <value>
                <fullName>Namibia - Standard Bank Namibia Limited</fullName>
            </value>
            <value>
                <fullName>Nigeria - Stanbic IBTC Bank PLC</fullName>
            </value>
            <value>
                <fullName>Singapore - Standard Merchant Bank (Asia) Limited</fullName>
            </value>
            <value>
                <fullName>South Africa - The Standard Bank of South Africa Limited</fullName>
            </value>
            <value>
                <fullName>Swaziland - Standard Bank Swaziland Limited</fullName>
            </value>
            <value>
                <fullName>Tanzania - Stanbic Bank Tanzania Limited</fullName>
            </value>
            <value>
                <fullName>Uganda - Stanbic Bank Uganda Limited</fullName>
            </value>
            <value>
                <fullName>United Kingdom - Standard Bank Plc</fullName>
            </value>
            <value>
                <fullName>United States of America - Standard Americas, Inc.</fullName>
            </value>
            <value>
                <fullName>Zambia - Stanbic Bank Zambia Limited</fullName>
            </value>
            <value>
                <fullName>Zimbabwe - Stanbic Bank Zimbabwe Limited</fullName>
            </value>
            <value>
                <fullName>Standard Bank Insurance Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>