force-app/main/default/objects/SB_Product__c/fields/Bank_Role__c.field-meta.xml
<CustomField>
    <fullName>Bank_Role__c</fullName>
    <description>Selection of SB&apos;s role and corresponding titles in the transaction.</description>
    <inlineHelpText>Selection of SB&apos;s role and corresponding titles in the transaction.</inlineHelpText>
    <label>Bank Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Bookrunner</fullName>
            </value>
            <value>
                <fullName>Co-Lead Manager</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Debt Advisor</fullName>
            </value>
            <value>
                <fullName>Equity Provider</fullName>
            </value>
            <value>
                <fullName>Joint Lead Arranger</fullName>
            </value>
            <value>
                <fullName>JSE Sponsor</fullName>
            </value>
            <value>
                <fullName>Lead Manager</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Main Lead Arranger</fullName>
            </value>
            <value>
                <fullName>Underwriter</fullName>
            </value>
            <value>
                <fullName>Sole Mandated Lead Arranger</fullName>
            </value>
            <value>
                <fullName>Joint Mandated Lead Arranger</fullName>
            </value>
            <value>
                <fullName>Sole Bookrunner</fullName>
            </value>
            <value>
                <fullName>Joint Bookrunner</fullName>
            </value>
            <value>
                <fullName>Sole Debt Underwriter</fullName>
            </value>
            <value>
                <fullName>Joint Debt Underwriter</fullName>
            </value>
            <value>
                <fullName>Facility Agent</fullName>
            </value>
            <value>
                <fullName>Security Agent</fullName>
            </value>
            <value>
                <fullName>Sole Lead Arranger</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Debt Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>