force-app/main/default/objects/SB_Product__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <description>Selection of applicable reference rate as quoted to the client</description>
    <inlineHelpText>Selection of applicable reference rate as quoted to the client</inlineHelpText>
    <label>Base Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>182 day T Bill</fullName>
            </value>
            <value>
                <fullName>1 month Libor</fullName>
            </value>
            <value>
                <fullName>3 month Libor</fullName>
            </value>
            <value>
                <fullName>91 day T Bill</fullName>
            </value>
            <value>
                <fullName>Cdi</fullName>
            </value>
            <value>
                <fullName>Euribor</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Jibar</fullName>
            </value>
            <value>
                <fullName>KBRR</fullName>
            </value>
            <value>
                <fullName>Libor</fullName>
            </value>
            <value>
                <fullName>Luibor</fullName>
            </value>
            <value>
                <fullName>NIBOR</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>SOFR</fullName>
            </value>
            <value>
                <fullName>TERM SOFR</fullName>
            </value>
            <value>
                <fullName>SONIA</fullName>
            </value>
            <value>
                <fullName>ESTR</fullName>
            </value>
            <value>
                <fullName>TONA</fullName>
            </value>
            <value>
                <fullName>SARON</fullName>
            </value>
            <value>
                <fullName>T BILL</fullName>
            </value>
            <value>
                <fullName>Bank Rate</fullName>
            </value>
            <value>
                <fullName>Central Bank Rate</fullName>
            </value>
            <value>
                <fullName>Monetary Policy Rate</fullName>
            </value>
            <value>
                <fullName>Reference Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>