force-app/main/default/objects/SB_Product__c/fields/Billing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_End_Date__c</fullName>
    <description>Enter the last billing date</description>
    <inlineHelpText>Enter the last billing date</inlineHelpText>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>