force-app/main/default/objects/SB_Product__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>Enter the first billing date</description>
    <inlineHelpText>Enter the first billing date</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>