force-app/main/default/objects/SB_Product__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <type>TextArea</type>
</CustomField>