force-app/main/default/objects/SB_Product__c/fields/Buyer_Price__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Price__c</fullName>
    <label>Buyer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>