force-app/main/default/objects/SB_Product__c/fields/Calculation_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Methodology__c</fullName>
    <description>SFP-8493 - Simple interest is the simple arithmetic mean of the daily RFRs.</description>
    <inlineHelpText>Simple interest is the simple arithmetic mean of the daily RFRs. NCCR (Compounding Rate) is calculated compounded interest factor based on the difference between the “Cumulative Compounded Effective Rate” for the day and the prior day to arrive at a daily accrual. Compounding balance is calculating compound interest by applying the daily RFR to the principal balance and accrued accumulated unpaid interest on a daily basis. The preferred choice is Compounding Rate</inlineHelpText>
    <label>Calculation Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPOUNDING BALANCE</fullName>
            </value>
            <value>
                <fullName>COMPOUNDING RATE (NCCR)</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
            <value>
                <fullName>TERM</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>