force-app/main/default/objects/SB_Product__c/fields/Capital_Approach__c.field-meta.xml
<CustomField>
    <fullName>Capital_Approach__c</fullName>
    <label>Capital Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inferred Rating</fullName>
            </value>
            <value>
                <fullName>Internal Rating</fullName>
            </value>
            <value>
                <fullName>Standard Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>