force-app/main/default/objects/SB_Product__c/fields/Clean_Credit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Clean_Credit_Margin__c</fullName>
    <description>The Clean Credit Margin (bps) is a calculated field and equals the Total Margin (bps) less the cost of Liquids (bps) and less the cost of Reserving (bps) where applicable SGPRT-625</description>
    <formula>Margin_pct__c - Liquids__c - Reserving__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Clean Credit Margin (bps) is a calculated field and equals the Total Margin (bps) less the cost of Liquids (bps) and less the cost of Reserving (bps) where applicable</inlineHelpText>
    <label>Clean Credit Margin (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>