force-app/main/default/objects/SB_Product__c/fields/Combined_Countries__c.field-meta.xml
<CustomField>
    <fullName>Combined_Countries__c</fullName>
    <formula>Client__r.CIF_Customer_Reporting_Country__c
&amp; &quot;/&quot; &amp;
TEXT(Country_of_Underlying_Risk__c)
&amp; &quot;/&quot; &amp;
TEXT(Client__r.Correspondence_Country__c)</formula>
    <label>Combined Countries</label>
    <type>Text</type>
</CustomField>