force-app/main/default/objects/SB_Product__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Case#1146 - Rudolf Niehaus - 03/2011</description>
    <inlineHelpText>Date of Commencement of Trade</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>