force-app/main/default/objects/SB_Product__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>SFP-5354 The amount that Standard Bank/Stanbic will earn from this policy</description>
    <inlineHelpText>Enter the amount that Standard Bank/Stanbic will earn from this policy</inlineHelpText>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>