force-app/main/default/objects/SB_Product__c/fields/Commission_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Frequency__c</fullName>
    <description>SFP-6290 - How often will commission be received.</description>
    <inlineHelpText>How often will commission be received?</inlineHelpText>
    <label>Commission Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Once off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>