force-app/main/default/objects/SB_Product__c/fields/Credit_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Committee Approval?</label>
    <type>Checkbox</type>
</CustomField>