force-app/main/default/objects/SB_Product__c/fields/CROC__c.field-meta.xml
<CustomField>
    <fullName>CROC__c</fullName>
    <description>Input transaction CROC  %  for specific facility. SGPRT-625</description>
    <inlineHelpText>Input transaction CROC  %  for specific facility</inlineHelpText>
    <label>CROC (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>