force-app/main/default/objects/SB_Product__c/fields/Current_Year_CommB_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_CommB_Revenue__c</fullName>
    <description>The current year revenue that is anticipated for this product on this opportunity (EN-896).</description>
    <inlineHelpText>The current year revenue that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Current Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>