force-app/main/default/objects/SB_Product__c/fields/Current_Year_Commission__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Commission__c</fullName>
    <description>SFP-6290 - The Estimated Current Year Commission that is anticipated for this product on this opportunity.</description>
    <inlineHelpText>The Estimated Current Year Commission that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Current Year Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>