force-app/main/default/objects/SB_Product__c/fields/Current_Year_Margin__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Margin__c</fullName>
    <inlineHelpText>The Estimated Current Year Margin that is anticipated for this product on this opportunity.</inlineHelpText>
    <label>Current Year Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>