force-app/main/default/objects/SB_Product__c/fields/Current_Year_Other__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Other__c</fullName>
    <label>Current Year Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>