force-app/main/default/objects/SB_Product__c/fields/Current_Year_Product_Revenue_Num_CommB__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Product_Revenue_Num_CommB__c</fullName>
    <description>US-2486 - New field for CommB Users</description>
    <formula>(Current_Year_Margin__c + Current_Year_Other__c + Current_Year_CommB_Revenue__c) / ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Product Revenue (Num)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>