force-app/main/default/objects/SB_Product__c/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <formula>(Current_Year_Fees__c   +  Current_Year_Margin__c  +  Current_Year_Other__c) *  Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equals the Current Year Total Revenue * the Opportunity Probability Percentage</inlineHelpText>
    <label>Current Year Weighted Product Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>