force-app/main/default/objects/SB_Product__c/fields/Current_Year_Revenue_Currency__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue_Currency__c</fullName>
    <description>Total of Current_Year_Fees__c + Current_Year_Margin__c + Current_Year_Other__c + Current_Year_CommB_Revenue__c + Current_Year_Commission__c without Probability weighting.</description>
    <formula>Current_Year_Fees__c + Current_Year_Margin__c + Current_Year_Other__c + Current_Year_CommB_Revenue__c +  Current_Year_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Current Year Fees, Current Year Margin, Current Year Other, Current Year Revenue, Current Year Commission</inlineHelpText>
    <label>Current Year Product Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>