force-app/main/default/objects/SB_Product__c/fields/Current_Year_Revenue_Num__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue_Num__c</fullName>
    <description>Used in Workflow field update to roll up to Opportunity Formula used to be: IF( SB_Gross_Participation__c &lt;&gt; 0, Margin_pct__c * SB_Gross_Participation__c , IF( Volume__c &lt;&gt; 0, Volume__c * Margin_Trading__c , IF( Volume_Transactional__c &lt;&gt; 0, Fee_Comm__c * Volume_Transactional__c , IF( Fee_Advisory__c &lt;&gt; 0, Fee_Advisory__c , null ) ) ) )</description>
    <formula>(Current_Year_Fees__c   +  Current_Year_Margin__c  +  Current_Year_Other__c + Current_Year_CommB_Revenue__c +  Current_Year_Commission__c ) /  ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Product Revenue (Num)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>