force-app/main/default/objects/SB_Product__c/fields/Current_YearWeightedProductRevenue_Text__c.field-meta.xml
<CustomField>
    <fullName>Current_YearWeightedProductRevenue_Text__c</fullName>
    <description>Store the product&apos;s Current Year Weighted Product Revenue in a text format (EH-885)</description>
    <formula>TEXT( Current_Year_Revenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field has been created to store the product&apos;s Current Year Weighted Product Revenue in a text format to avoid special characters being created in the Excel file and causing integration issues</inlineHelpText>
    <label>Current YearWeightedProductRevenue(Text)</label>
    <type>Text</type>
</CustomField>