force-app/main/default/objects/SB_Product__c/fields/Date_2008__c.field-meta.xml
<CustomField>
    <fullName>Date_2008__c</fullName>
    <label>Date 2008</label>
    <type>Date</type>
</CustomField>