force-app/main/default/objects/SB_Product__c/fields/Date_2009__c.field-meta.xml
<CustomField>
    <fullName>Date_2009__c</fullName>
    <label>Date 2009</label>
    <type>Date</type>
</CustomField>