force-app/main/default/objects/SB_Product__c/fields/Date_2010__c.field-meta.xml
<CustomField>
    <fullName>Date_2010__c</fullName>
    <label>Date 2010</label>
    <type>Date</type>
</CustomField>