force-app/main/default/objects/SB_Product__c/fields/Distribution_Required__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Required__c</fullName>
    <description>Is Distribution Required. SGPRT-626</description>
    <inlineHelpText>Is the Loan Syndication and Distribution team required?</inlineHelpText>
    <label>Distribution Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>