force-app/main/default/objects/SB_Product__c/fields/Dividend_Protected__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Protected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case# 1146: 03/2011 - Rudolf Niehaus IRD / GM Specific field</description>
    <label>Dividend Protected</label>
    <type>Checkbox</type>
</CustomField>