force-app/main/default/objects/SB_Product__c/fields/Draw_Date__c.field-meta.xml
<CustomField>
    <fullName>Draw_Date__c</fullName>
    <label>Draw Date</label>
    <type>Date</type>
</CustomField>