force-app/main/default/objects/SB_Product__c/fields/Draw_Date_Count__c.field-meta.xml
<CustomField>
    <fullName>Draw_Date_Count__c</fullName>
    <label>Draw Date Count</label>
    <summaryForeignKey>Draw_Down_Profile__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>