force-app/main/default/objects/SB_Product__c/fields/Drawn_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Drawn_Assumption__c</fullName>
    <description>The average percentage of the facility that would be drawn during the tenor of the facility SGPRT-625</description>
    <inlineHelpText>The average percentage of the facility that would be drawn during the tenor of the facility</inlineHelpText>
    <label>Drawn Assumption (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>