force-app/main/default/objects/SB_Product__c/fields/Earliest_Draw_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Draw_Date_Rollup__c</fullName>
    <description>Case#141 - Rudolf Niehaus Rollup to the earliest draw date this value is used to validate that the user do not enter an Estimated Close date on the Opportunity that is after the smallest draw date on the draw down profile records of the oppo product</description>
    <label>Earliest Draw Date</label>
    <summarizedField>Draw_Down_Profile__c.Draw_Date__c</summarizedField>
    <summaryForeignKey>Draw_Down_Profile__c.Product__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>