force-app/main/default/objects/SB_Product__c/fields/Equity_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Equity_Committee_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equity Committee Approval?</label>
    <type>Checkbox</type>
</CustomField>