force-app/main/default/objects/SB_Product__c/fields/EstRevSch_Updated__c.field-meta.xml
<CustomField>
    <fullName>EstRevSch_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Estimated Revenue Schedule is updated</description>
    <label>EstRevSch_Updated</label>
    <type>Checkbox</type>
</CustomField>