force-app/main/default/objects/SB_Product__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <description>US-4418 - Technical field to capture exchange rate on Product.</description>
    <label>ExchangeRate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>