force-app/main/default/objects/SB_Product__c/fields/Existing_Facility_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Existing_Facility_Maturity_Date__c</fullName>
    <description>If refinancing an existing facility, please specify the maturity date of the existing facility</description>
    <inlineHelpText>If refinancing an existing facility, please specify the maturity date of the existing facility</inlineHelpText>
    <label>Existing Facility Maturity Date</label>
    <type>Date</type>
</CustomField>