force-app/main/default/objects/SB_Product__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>SFP-5354 Date when cover will expire/end.</description>
    <inlineHelpText>Enter the date on which the cover will expire</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>